# trader-soja

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0eea3b8451d4_ajuste_contratos.py  180a0f4922d6_add_ativo_to_farms.py  493d16cbb648_ajuste_cbot_quote.py  71de7301ef6d_models_refactor_step_a.py  7d64abbea6e4_ajuste_cbot_quote.py  8353320007fd_ajuste_farm.py  95cde9a035da_init.py  c3d688dbaff9_fx_quote_check_link_quote.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  deps.py  logging.py  roles.py  security.py
backend/app/db/: base.py  mixins.py
backend/app/models/: __init__.py  alert_event.py  alert_rule.py  cbot_quote.py  cbot_source.py  contract.py  expense_usd.py  farm.py  farm_user.py  fx_manual_point.py  fx_model_point.py  fx_model_run.py  fx_quote.py  fx_quote_check.py  fx_source.py  fx_spot_tick.py  hedge_cbot.py  hedge_fx.py  hedge_premium.py  interest_rate.py  offset_calibration.py  user.py
backend/app/schemas/: alerts.py  auth.py  base.py  cbot.py  cbot_sources.py  contracts.py  contracts_mtm.py  dashboard.py  dashboard_usd.py  expenses.py  farm_members.py  farms.py  fx_manual_points.py  fx_model.py  fx_quotes.py  fx_sources.py  fx_spot.py  hedges.py  interest_rates.py  offset_calibration.py  users.py
backend/app/services/: alerts_service.py  auth_service.py  cashflow_service.py  cbot_service.py  cbot_sources_service.py  contracts_mtm_service.py  contracts_service.py  dashboard_service.py  (+10 more)
(+233 files in other folders)
